# virtu-backend

./: README.md  annotated_document.docx  generated_doc.docx  main.py  pyproject.toml  test.py
src/auth/model/: user_auth_models.py
src/auth/routes/: user_auth.py
src/auth/service/: user_auth_service.py
src/model/: models.py  virtu_chef_models.py
src/prompts/: virtu_chef_prompts.py
src/routes/: health_check.py  user_auth.py  virtu_chef.py
src/service/: user_auth_service.py  virtu_chef_service.py
src/virtu_chef/prompts/: virtu_chef_prompts.py
src/virtu_chef/routes/: virtu_chef.py
src/virtu_chef/service/: virtu_chef_service.py
src/virtu_hunter/models/: virtu_hunter_models.py
src/virtu_hunter/prompts/: virtu_hunter_prompts.py
src/virtu_hunter/routes/: virtu_hunter.py
src/virtu_hunter/service/: TestResume.py  resume.docx  resumeanalisys_service.py  test.py  uploadresume_service.py  virtu_hunter_service.py
src/virtu_hunter/templates/: resume_template1.docx
